<resources>
    <string name="app_name">Navigation</string>
    <string name="title_navbar">MENU</string>

    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_frag">HOME</string>
    <string name="events_frag">EVENTS</string>
    <string name="search_frag">SEARCH PAGE</string>
    <string name="add_frag">ADD EVENT</string>

    <!-- Home Fragment Placeholder Text -->
    <string name="temp">Temperature</string>
    <string name="wind">Wind</string>
    <string name="humid">Humidity</string>
    <string name="location">Location</string>
    <string name="type">Type</string>

    <!-- Buttons Text -->
    <string name="search_button">Search</string>
    <string name="view_button">View</string>
    <string name="edit_button">Edit</string>

    <!-- Cardview generic placeholder text -->
    <string name="titlePlaceholder">TITLE</string>
    <string name="locationPlaceholder">LOCATION</string>
    <string name="datePlaceholder">01/02/2017</string>
    <string name="eventTypePlaceholder">FESTIVAL</string>

    <string-array name="spinnerText">
        <item>Concert</item>
        <item>Festival</item>
        <item>Sport</item>
        <item>Exhibition</item>
        <item>Race</item>
        <item>Not Defined</item>
    </string-array>


</resources>
