<android.support.design.internal.ScrimInsetsFrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.robertmcateer.com.navigation.Home"
    android:background="@null"
    >

    <!-- TODO: Update blank fragment layout -->
    <android.support.v7.widget.CardView
        android:id="@+id/card_view_weather"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_marginTop="-90dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        card_view:cardCornerRadius="2dp"
        card_view:cardPreventCornerOverlap="true"
        >

        <ImageView
            android:id="@+id/image_cardview"
            android:layout_width="80dp"
            android:layout_height="80sp"
            android:layout_marginLeft="50sp"
            android:layout_marginStart="50sp"
            android:layout_marginTop="20sp"
            android:adjustViewBounds="true"
            android:contentDescription="Weather type icon" />

        <TextView
            android:id="@+id/location_cardview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="200dp"
            android:layout_marginTop="40dp"
            android:text="Location"
            android:textSize="22sp"
            tools:ignore="HardcodedText,RtlHardcoded"/>

        <TextView

            android:id="@+id/temp_cardview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="100dp"
            android:text="@string/temp"/>

        <TextView
            android:id="@+id/humid_cardview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="140dp"
            android:text="@string/humid"/>

        <TextView
            android:id="@+id/type_cardview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="200dp"
            android:layout_marginStart="200dp"
            android:layout_marginTop="100dp"
            android:text="@string/type"/>

        <TextView
            android:id="@+id/wind_cardview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="200dp"
            android:layout_marginStart="200dp"
            android:layout_marginTop="140dp"
            android:text="@string/wind"/>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/weather2_card"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:layout_gravity="center"
        android:layout_marginTop="110dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        card_view:cardCornerRadius="2dp">

        <TextView
            android:id="@+id/weather2_title"
            android:layout_width="346dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="What are you doing today?"
            android:textAlignment="center"
            android:textSize="24sp"
            tools:ignore="HardcodedText,RtlHardcoded"/>

        <TextView
            android:id="@+id/suggestion"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="60sp"
            android:text="random text goes here"
            android:textAlignment="center"
            android:textSize="18sp"
            android:typeface="normal"
            tools:ignore="HardcodedText,RtlHardcoded"/>
    </android.support.v7.widget.CardView>

</android.support.design.internal.ScrimInsetsFrameLayout>
